# CMakeList.txt: проект CMake для RoguelikeTask3; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (RoguelikeTask3 "RoguelikeTask3.cpp" "RoguelikeTask3.h" "Monster.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
